fix: footer spacing

--- a/style.css
+++ b/style.css
@@ -216,6 +216,7 @@ body {
   display: flex;
   gap: 0;
   margin-top: 36px;
+  margin-bottom: 36px;
   align-items: stretch;
 }
 
